src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-b-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nborder on\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 599 × 680, bounds: 1231 × 680, states: [Activated]
