src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-b.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nborder on"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 608 × 680, bounds: 1240 × 680, states: [Activated]
